--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - "80:3000"
     tty: true
     volumes:
-      - ./app:/app 
+      - ./app:/app  
+      - /app/node_modules
     environment:
       - NODE_ENV=development 
       - WATCHPACK_POLLING=true
