--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
