--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@iconify/react": "^5.1.0",
+    "@prisma/client": "^6.0.1",
     "bootstrap": "^5.3.3",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "next": "15.0.4",
+    "prisma": "^6.0.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
