--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,23 @@
 services:
+  db: 
+    image: postgres:latest
+    container_name: postgres_db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: example_db
+    volumes:
+      - ./docker-dev-volumes/postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
   app:
     build:
       context: .
       dockerfile: Dockerfile 
     ports: 
       - "80:3000"
+    depends_on:
+      - postgres_db
     tty: true
     volumes:
       - ./app:/app  
