--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@iconify/react": "^5.1.0",
     "@prisma/client": "^6.0.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "bootstrap": "^5.3.3",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
@@ -20,7 +23,10 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
-    "simplebar-react": "^3.2.6"
+    "react-query": "^3.39.3",
+    "simplebar-react": "^3.2.6",
+    "superjson": "^2.2.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
