--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react-query": "^3.39.3",
     "simplebar-react": "^3.2.6",
     "superjson": "^2.2.2",
+    "trpc-openapi": "^1.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
